Docs, Kommentare & Learning Hub aktualisiert
- README.md vollständig überarbeitet (Architekturdiagramm, API-Referenz, Sicherheitskonzept)
- BACK.md auf aktuellen Implementierungsstand gebracht (kein Platzhalter mehr)
- Alle Java-, Python- und Vue/JS-Quelldateien mit deutschen Kommentaren versehen
- Learning Hub (11 Module) auf Java 21 LTS, Multi-Provider-KI und RBAC aktualisiert
- README-SUB.md komplett neu geschrieben (vollständige Systemarchitektur)
- Temporäre tmpclaude-*-Dateien entfernt

Co-Authored-By: Claude <noreply@anthropic.com>